// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders selected correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "#E6E6E6",
        "flexDirection": "row",
        "marginLeft": 16,
        "paddingVertical": 14,
      }
    }
  >
    <View
      style={
        {
          "marginRight": 16,
        }
      }
    >
      <svg
        fill="none"
        height={20}
        style={{}}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#1AB775"
          strokeWidth={2}
          style={{}}
        />
        <circle
          cx="10"
          cy="10"
          fill="#1AB775"
          r="6"
          style={{}}
        />
      </svg>
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "flex": 1,
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 24,
          "marginRight": 16,
        }
      }
    >
      Example
    </Text>
  </View>
</View>
`;

exports[`renders unselected correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "#E6E6E6",
        "flexDirection": "row",
        "marginLeft": 16,
        "paddingVertical": 14,
      }
    }
  >
    <View
      style={
        {
          "marginRight": 16,
        }
      }
    >
      <svg
        fill="none"
        height={20}
        style={{}}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#757575"
          strokeWidth={2}
          style={{}}
        />
        <circle
          cx="10"
          cy="10"
          fill="none"
          r="6"
          style={{}}
        />
      </svg>
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "flex": 1,
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 24,
          "marginRight": 16,
        }
      }
    >
      Example
    </Text>
  </View>
</View>
`;
